syntax = "proto3";

import "io/github/vinicreis/pubsub/server/core/model/data/text_message.proto";

option java_package = "io.github.vinicreis.domain.server.core.model.request";

message PostMultipleRequest {
  string queueId = 1;
  repeated TextMessage content = 2;
}
