syntax = "proto3";

option java_package = "io.github.vinicreis.domain.server.core.model.request";

message SubscribeRequest {
  string queueId = 1;
  optional int32 timeoutSeconds = 2;
}
