syntax = "proto3";

option java_package = "io.github.vinicreis.pubsub.server.model.request";

message RemoveRequest {
  string id = 1;
}
